[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/menu/skirmish_player.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/courier_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/gui/menu/skirmish_border_red.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/menu/skirmish_border_blue.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/menu/skirmish_border_yellow.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/menu/skirmish_border_green.png" type="Texture" id=6]

[node name="skirmish_player" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1270.0
margin_bottom = -955.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.196078, 0.196078, 0.196078, 0.823529 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="blue_player" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = -300.0
margin_bottom = 1.00001
custom_fonts/font = ExtResource( 2 )
text = "Sapphire Dawn"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="red_player" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = -300.0
margin_bottom = 1.00001
custom_fonts/font = ExtResource( 2 )
text = "Ruby Dusk"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="yellow_player" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = -300.0
margin_bottom = 1.00001
custom_fonts/font = ExtResource( 2 )
text = "Amber Noon"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="green_player" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = -300.0
margin_bottom = 1.00001
custom_fonts/font = ExtResource( 2 )
text = "Jade Twilight"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="player_type" type="Button" parent="."]
margin_left = 350.0
margin_top = 35.0
margin_right = 445.0
margin_bottom = 85.0
text = "HUMAN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="starting_ap" type="Button" parent="."]
margin_left = 455.0
margin_top = 35.0
margin_right = 550.0
margin_bottom = 85.0
text = "50 AP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border_blue" type="Sprite" parent="."]
position = Vector2( 325, 62 )
texture = ExtResource( 4 )

[node name="border_red" type="Sprite" parent="."]
visible = false
position = Vector2( 325, 62 )
texture = ExtResource( 3 )

[node name="border_yellow" type="Sprite" parent="."]
visible = false
position = Vector2( 325, 62 )
texture = ExtResource( 5 )

[node name="border_green" type="Sprite" parent="."]
visible = false
position = Vector2( 325, 62 )
texture = ExtResource( 6 )

[node name="swap" type="Button" parent="."]
margin_left = 540.0
margin_top = -25.0
margin_right = 635.0
margin_bottom = 25.0
text = "Swap"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="player_type" to="." method="_on_player_type_pressed"]
[connection signal="pressed" from="starting_ap" to="." method="_on_starting_ap_pressed"]
[connection signal="pressed" from="swap" to="." method="_on_swap_pressed"]
